--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,11 +7,12 @@
   <body>
     <!--my first ever usage of EJS-->
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h2>Welcome to <%= title %></h2>
+    <a href="/new">Send a New Message</a>
     <ul>
       <% for (let i = 0; i < messages.length; i++) { %>
-      <li>
-        <h1><%= messages[i].text %></h1>
+      <li class="message-container">
+        <h3><%= messages[i].text %></h3>
         <p><%= messages[i].user %></p>
         <p><%= messages[i].added %></p>
       </li>
